fix: correct shift+key animation, correct second keyboard layout

--- a/src/styles/_keyboard.scss
+++ b/src/styles/_keyboard.scss
@@ -96,6 +96,8 @@ body {
 }
 
 .item {
+  position: relative;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -116,6 +118,121 @@ body {
 
   transition: background-color 0.6s ease-out, color 0.4s ease-out,
     scale 0.1s ease-out;
+
+  &:before {
+    position: absolute;
+    top: 0;
+    left: 10%;
+    font-size: 1.7rem;
+  }
+
+  &:nth-child(1) {
+    &:before {
+      content: '\007E';
+    }
+  }
+
+  &:nth-child(2) {
+    &::before {
+      content: '!';
+    }
+  }
+
+  &:nth-child(3) {
+    &::before {
+      content: '@';
+    }
+  }
+
+  &:nth-child(4) {
+    &::before {
+      content: '#';
+    }
+  }
+
+  &:nth-child(5) {
+    &::before {
+      content: '$';
+    }
+  }
+
+  &:nth-child(6) {
+    &::before {
+      content: '%';
+    }
+  }
+
+  &:nth-child(7) {
+    &::before {
+      content: '^';
+    }
+  }
+
+  &:nth-child(8) {
+    &::before {
+      content: '&';
+    }
+  }
+
+  &:nth-child(9) {
+    &::before {
+      content: '*';
+    }
+  }
+
+  &:nth-child(10) {
+    &::before {
+      content: '(';
+    }
+  }
+
+  &:nth-child(11) {
+    &::before {
+      content: ')';
+    }
+  }
+
+  &:nth-child(12) {
+    &::before {
+      content: '_';
+    }
+  }
+
+  &:nth-child(13) {
+    &::before {
+      content: '+';
+    }
+  }
+
+  &:nth-child(39) {
+    &:before {
+      content: ':';
+    }
+  }
+
+  &:nth-child(40) {
+    &:before {
+      content: "'";
+    }
+  }
+
+  &:nth-child(50) {
+    &:before {
+      content: '<';
+    }
+  }
+
+  &:nth-child(51) {
+    &:before {
+      content: '>';
+    }
+  }
+
+  &:nth-child(52) {
+    &:before {
+      content: '?';
+    }
+  }
 
   &.lowercase {
     text-transform: lowercase;
@@ -175,6 +292,107 @@ body {
 
   &:last-child {
     grid-column: span 3;
+  }
+}
+
+.change-language {
+  & .item {
+    position: relative;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 10%;
+      font-size: 1.7rem;
+    }
+
+    &:nth-child(1) {
+      &:before {
+        content: '';
+      }
+    }
+
+    &:nth-child(2) {
+      &::before {
+        content: '!';
+      }
+    }
+
+    &:nth-child(3) {
+      &::before {
+        content: '"';
+      }
+    }
+
+    &:nth-child(4) {
+      &::before {
+        content: '№';
+      }
+    }
+
+    &:nth-child(5) {
+      &::before {
+        content: ';';
+      }
+    }
+
+    &:nth-child(6) {
+      &::before {
+        content: '%';
+      }
+    }
+
+    &:nth-child(7) {
+      &::before {
+        content: ':';
+      }
+    }
+
+    &:nth-child(8) {
+      &::before {
+        content: '?';
+      }
+    }
+
+    &:nth-child(9) {
+      &::before {
+        content: '*';
+      }
+    }
+
+    &:nth-child(10) {
+      &::before {
+        content: '(';
+      }
+    }
+
+    &:nth-child(11) {
+      &::before {
+        content: ')';
+      }
+    }
+
+    &:nth-child(12) {
+      &::before {
+        content: '_';
+      }
+    }
+
+    &:nth-child(13) {
+      &::before {
+        content: '+';
+      }
+    }
+
+    &:nth-child(39),
+    &:nth-child(40),
+    &:nth-child(50),
+    &:nth-child(51),
+    &:nth-child(52) {
+      &::before {
+        content: '';
+      }
+    }
   }
 }
 
