--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --color-bg: hsl(216, 21%, 91%);
   --color-text: hsl(204, 80%, 50%);
@@ -83,6 +84,7 @@ body {
 }
 
 .item {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -95,6 +97,66 @@ body {
   box-shadow: var(--box-shadow-outline);
   cursor: pointer;
   transition: background-color 0.6s ease-out, color 0.4s ease-out, scale 0.1s ease-out;
+}
+.item:before {
+  position: absolute;
+  top: 0;
+  left: 10%;
+  font-size: 1.7rem;
+}
+.item:nth-child(1):before {
+  content: "~";
+}
+.item:nth-child(2)::before {
+  content: "!";
+}
+.item:nth-child(3)::before {
+  content: "@";
+}
+.item:nth-child(4)::before {
+  content: "#";
+}
+.item:nth-child(5)::before {
+  content: "$";
+}
+.item:nth-child(6)::before {
+  content: "%";
+}
+.item:nth-child(7)::before {
+  content: "^";
+}
+.item:nth-child(8)::before {
+  content: "&";
+}
+.item:nth-child(9)::before {
+  content: "*";
+}
+.item:nth-child(10)::before {
+  content: "(";
+}
+.item:nth-child(11)::before {
+  content: ")";
+}
+.item:nth-child(12)::before {
+  content: "_";
+}
+.item:nth-child(13)::before {
+  content: "+";
+}
+.item:nth-child(39):before {
+  content: ":";
+}
+.item:nth-child(40):before {
+  content: "'";
+}
+.item:nth-child(50):before {
+  content: "<";
+}
+.item:nth-child(51):before {
+  content: ">";
+}
+.item:nth-child(52):before {
+  content: "?";
 }
 .item.lowercase {
   text-transform: lowercase;
@@ -141,6 +203,58 @@ body {
 }
 .item:last-child {
   grid-column: span 3;
+}
+
+.change-language .item {
+  position: relative;
+}
+.change-language .item::before {
+  position: absolute;
+  top: 0;
+  left: 10%;
+  font-size: 1.7rem;
+}
+.change-language .item:nth-child(1):before {
+  content: "";
+}
+.change-language .item:nth-child(2)::before {
+  content: "!";
+}
+.change-language .item:nth-child(3)::before {
+  content: '"';
+}
+.change-language .item:nth-child(4)::before {
+  content: "№";
+}
+.change-language .item:nth-child(5)::before {
+  content: ";";
+}
+.change-language .item:nth-child(6)::before {
+  content: "%";
+}
+.change-language .item:nth-child(7)::before {
+  content: ":";
+}
+.change-language .item:nth-child(8)::before {
+  content: "?";
+}
+.change-language .item:nth-child(9)::before {
+  content: "*";
+}
+.change-language .item:nth-child(10)::before {
+  content: "(";
+}
+.change-language .item:nth-child(11)::before {
+  content: ")";
+}
+.change-language .item:nth-child(12)::before {
+  content: "_";
+}
+.change-language .item:nth-child(13)::before {
+  content: "+";
+}
+.change-language .item:nth-child(39)::before, .change-language .item:nth-child(40)::before, .change-language .item:nth-child(50)::before, .change-language .item:nth-child(51)::before, .change-language .item:nth-child(52)::before {
+  content: "";
 }
 
 @media (max-width: 48em) {
